--- a/homeupc.templates/boto-advertencia.html
+++ b/homeupc.templates/boto-advertencia.html
@@ -1,1 +1,3 @@
-<button type="button" class="btn btn-warning">Warning</button>
+<!-- Indicates caution should be taken with this action -->
+<p><button type="button" class="btn btn-warning">Warning</button></p>
+<p></p>
