--- a/homeupc.templates/boto-blau.html
+++ b/homeupc.templates/boto-blau.html
@@ -1,1 +1,3 @@
-<button type="button" class="btn btn-primary">Primary</button>
+<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+<p><button type="button" class="btn btn-primary">Primary</button></p>
+<p></p>
