--- a/homeupc.templates/boto-enllac.html
+++ b/homeupc.templates/boto-enllac.html
@@ -1,1 +1,2 @@
-<button type="button" class="btn btn-link">Link</button>
+<!-- Deemphasize a button by making it look like a link while maintaining button behavior -->
+<p><button type="button" class="btn btn-link">Link</button></p>
