--- a/homeupc.templates/boto-info.html
+++ b/homeupc.templates/boto-info.html
@@ -1,1 +1,3 @@
-<button type="button" class="btn btn-info">Info</button>
+<!-- Contextual button for informational alert messages -->
+<p><button type="button" class="btn btn-info">Info</button></p>
+<p></p>
