--- a/homeupc.templates/cita.html
+++ b/homeupc.templates/cita.html
@@ -1,3 +1,4 @@
 <blockquote>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-<footer>Lorem ipsum <cite title="Source Title">Orígen del títol</cite></footer></blockquote>
+<footer>Someone famous in <cite title="Source Title">Source Title</cite></footer></blockquote>
+<p></p>
