--- a/homeupc.templates/enllac-banner-minimal.html
+++ b/homeupc.templates/enllac-banner-minimal.html
@@ -1,1 +1,2 @@
-<a href="#" class="link-banner-minimal">Títol del bàner</a>
+<p><a href="#" class="link-banner-minimal">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></p>
+<p></p>
