--- a/homeupc.templates/enllac-banner.html
+++ b/homeupc.templates/enllac-banner.html
@@ -1,1 +1,2 @@
-<a href="#" class="link-banner">Títol del bàner</a>
+<p><a href="#" class="link-banner">Lorem ipsum dolor sit amet, consectetur adipiscing elit</a></p>
+<p></p>
