--- a/homeupc.templates/text-destacat.html
+++ b/homeupc.templates/text-destacat.html
@@ -1,1 +1,2 @@
-<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas volutpat posuere nunc, vitae dignissim mauris porta cursus.</p>
+<p class="lead">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus.</p>
+<p></p>
