--- a/homeupc.templates/adreca.html
+++ b/homeupc.templates/adreca.html
@@ -1,16 +1,17 @@
 <address>
-<dl class="list-address" style="outline-style: none;">
-<dt>Direcció</dt>
+<dl class="list-address">
+<dt style="outline-style: none;">Direcció</dt>
 <dd>Nom i Cognoms</dd>
 <dt>Directori</dt>
 <dd><a href="#">Càrrecs i personal</a></dd>
 <dt>Ubicació</dt>
-<dd><a href="#">UPCmaps </a></dd>
+<dd><a href="#">UPCmaps</a></dd>
 <dt>Telèfon</dt>
 <dd>93 783 70 22</dd>
 <dt><abbr title="" data-toggle="tooltip" data-placement="top" data-original-title="Correu electrònic">C/e</abbr></dt>
-<dd><a href="#">correu.electronic@upc.edu</a></dd>
+<dd><a href="#">adreca.electronica@upc.edu</a></dd>
 <dt>Web</dt>
-<dd><a href="#">www.upc.edu/unitat</a></dd>
+<dd><a href="#">www.upc.edu/directori</a></dd>
 </dl>
 </address>
+<p></p>
