--- a/homeupc.templates/banner-blanc.html
+++ b/homeupc.templates/banner-blanc.html
@@ -1,5 +1,5 @@
-  <a target="_blank" href="#" class="btn-banner">
-    <h2>Tìtol del bàner</h2>
-    <p>Text descriptiu del bàner</p>
-  </a>
-
+<a href="#" class="btn-banner">
+<h2>Tìtol del bàner</h2>
+<p>Text descriptiu del bàner</p>
+</a>
+<p></p>
