--- a/homeupc.templates/banner-blau.html
+++ b/homeupc.templates/banner-blau.html
@@ -1,5 +1,5 @@
-  <a target="_blank" href="#" class="btn-banner btn-banner-primary">
-    <h2>Tìtol del bàner</h2>
-    <p>Text descriptiu del bàner</p>
-  </a>
-
+<a href="#" target="_blank" class="btn-banner btn-banner-primary">
+<h2>Tìtol del bàner</h2>
+<p>Text descriptiu del bàner</p>
+</a>
+<p></p>
