--- a/homeupc.templates/banner-foto.html
+++ b/homeupc.templates/banner-foto.html
@@ -1,5 +1,5 @@
-  <a target="_blank" href="#" class="btn-banner">
-    <img src="++theme++homeupc/assets/images/banner-example-bg.png" alt=""/>
-    <h2>Tìtol del bàner</h2>
-    <p>Text descriptiu del bàner</p>
-  </a>
+<a href="#" target="_blank" class="btn-banner"><img src="../../resolveuid/fc66f13d3c7a490bbdc225e1f74cf420" alt="" />
+<h2>Titular</h2>
+<p>Text descriptiu</p>
+</a>
+<p></p>
