--- a/homeupc.templates/banner-verd.html
+++ b/homeupc.templates/banner-verd.html
@@ -1,4 +1,5 @@
-  <a target="_blank" href="#" class="btn-banner btn-banner-success">
-    <h2>Tìtol del bàner</h2>
-    <p>Text descriptiu del bàner</p>
-  </a>
+<a href="#" target="_blank" class="btn-banner btn-banner-success">
+<h2>Titular</h2>
+<p>Text descriptiu</p>
+</a>
+<p></p>
