--- a/homeupc.templates/boto-estandard.html
+++ b/homeupc.templates/boto-estandard.html
@@ -1,1 +1,3 @@
-<button type="button" class="btn btn-default">Default</button>
+<!-- Standard button -->
+<p><button type="button" class="btn btn-default">Default</button></p>
+<p></p>
