--- a/homeupc.templates/boto-perill.html
+++ b/homeupc.templates/boto-perill.html
@@ -1,1 +1,3 @@
-<button type="button" class="btn btn-danger">Danger</button>
+<!-- Indicates a dangerous or potentially negative action -->
+<p><button type="button" class="btn btn-danger">Danger</button></p>
+<p></p>
