--- a/homeupc.templates/boto-verd.html
+++ b/homeupc.templates/boto-verd.html
@@ -1,1 +1,3 @@
-<button type="button" class="btn btn-success">Success</button>
+<!-- Indicates a successful or positive action -->
+<p><button type="button" class="btn btn-success">Success</button></p>
+<p></p>
