--- a/homeupc.templates/caixes-linkables-3-columnes.html
+++ b/homeupc.templates/caixes-linkables-3-columnes.html
@@ -1,6 +1,5 @@
-<section class="container content-banners">
-        <h2 class="titling-line">Titular</h2>
-<div class="row">
+
+<div class="row content-banners">
    <div class="col-xs-12 col-md-4"><a href="#" class="btn-banner btn-banner-large"><img src="../../resolveuid/f02b86036b7c44a28d80fbac877d9757" alt="" class="image-inline" data-linktype="image" data-scale="" data-val="f02b86036b7c44a28d80fbac877d9757" />
         <div>
            <h2>Lorem ipsum</h2>
@@ -23,5 +22,5 @@
       </a>
     </div>
 </div>
-</section>
+
 <p></p>
