--- a/homeupc.templates/conjunt-8-destacats.html
+++ b/homeupc.templates/conjunt-8-destacats.html
@@ -31,6 +31,38 @@
 			</div>
 		</a>
 	</div>
+	<div class="col-xs-12 col-md-3 col-sm-6">
+    	<a href="#"><img src="../../resolveuid/e08ddbc9d8c34d558f6a9425b8409d43" alt="" class="center-block img-circle" />
+			<div class="sectioning-wrap text-center">
+				<h2 class="h3"><strong>Lorem ipsum</strong></h2>
+				<p>Sciens nimis est periculosum, nimis scientia est malis anima et mala valetudo.</p>
+			</div>
+		</a>
+	</div>
+	<div class="col-xs-12 col-md-3 col-sm-6">
+    	<a href="#"><img src="../../resolveuid/e08ddbc9d8c34d558f6a9425b8409d43" alt="" class="center-block img-circle" />
+			<div class="sectioning-wrap text-center">
+				<h2 class="h3"><strong>Lorem ipsum</strong></h2>
+				<p>Sciens nimis est periculosum, nimis scientia est malis anima et mala valetudo.</p>
+			</div>
+		</a>
+	</div>
+	<div class="col-xs-12 col-md-3 col-sm-6">
+    	<a href="#"><img src="../../resolveuid/e08ddbc9d8c34d558f6a9425b8409d43" alt="" class="center-block img-circle" />
+			<div class="sectioning-wrap text-center">
+				<h2 class="h3"><strong>Lorem ipsum</strong></h2>
+				<p>Sciens nimis est periculosum, nimis scientia est malis anima et mala valetudo.</p>
+			</div>
+		</a>
+	</div>
+	<div class="col-xs-12 col-md-3 col-sm-6">
+    	<a href="#"><img src="../../resolveuid/e08ddbc9d8c34d558f6a9425b8409d43" alt="" class="center-block img-circle" />
+			<div class="sectioning-wrap text-center">
+				<h2 class="h3"><strong>Lorem ipsum</strong></h2>
+				<p>Sciens nimis est periculosum, nimis scientia est malis anima et mala valetudo.</p>
+			</div>
+		</a>
+	</div>
     
 </div>
 <p></p>
