--- a/homeupc.templates/contenidor-destacat-foto.html
+++ b/homeupc.templates/contenidor-destacat-foto.html
@@ -1,4 +1,5 @@
-<div class="well"><img src="++theme++homeupc/assets/images/well-example-img.png" data-scale="large" alt="" class="retina pull-left" val="e08ddbc9d8c34d558f6a9425b8409d43" />
-  <h2 class="h4" style="outline-style: none;"><strong>Lorem ipsum</strong></h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur cursus <a href="document.pdf" target="_blank">aliquam tellus</a> quis semper. Quisque mollis felis a quam fermentum accumsan. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+<div class="well"><img src="../../resolveuid/e08ddbc9d8c34d558f6a9425b8409d43/@@images/image/large" data-scale="large" alt="" class="retina pull-left" val="e08ddbc9d8c34d558f6a9425b8409d43" />
+    <h2 class="h4"><strong>Lorem ipsum</strong></h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur cursus <a href="document.pdf" target="_blank">aliquam tellus</a> quis semper. Quisque mollis felis a quam fermentum accumsan. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
 </div>
+<p></p>
