--- a/homeupc.templates/llistat-numeric.html
+++ b/homeupc.templates/llistat-numeric.html
@@ -1,8 +1,10 @@
+<!--Han de ser files de 6-->
 <ul class="list-numeral">
-  <li><strong>63</strong> graus</li>
-  <li><strong>70</strong> màsters</li>
-  <li><strong>49</strong> doctorats</li>
-  <li><strong style="outline-style: none;">47,000</strong> estudiants</li>
-  <li><strong>21</strong> centres</li>
-  <li><strong>7</strong> ciutats</li>
+    <li><strong>63</strong> graus</li>
+    <li><strong>70</strong> màsters</li>
+    <li><strong>49</strong> doctorats</li>
+    <li><strong>47,000</strong> estudiants</li>
+    <li><strong>21</strong> centres</li>
+    <li><strong>7</strong> ciutats</li>
 </ul>
+<p></p>
