--- a/homeupc.templates/nota.html
+++ b/homeupc.templates/nota.html
@@ -1,1 +1,6 @@
-<small id="note" role="note" aria-labelledby="note-title" aria-describedby="note-description" class="note"><strong id="note-title">Títol de la nota</strong><span id="note-description" style="outline-style: none;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas volutpat posuere nunc, vitae dignissim mauris porta cursus. Duis a elit tincidunt, tempor nibh id, faucibus lectus. Pellentesque purus tellus, convallis in condimentum in, ultricies at nisi. Pellentesque ut vestibulum tortor. Integer egestas suscipit quam. Suspendisse bibendum diam a ultricies suscipit.</span></small>
+<p>
+    <small id="note" role="note" aria-labelledby="note-title" aria-describedby="note-description" class="note">
+		<strong id="note-title">Títol de la nota</strong>
+		 <span id="note-description" style="outline-style: none;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus tincidunt nibh, sed sollicitudin lorem. Cras erat metus, mollis non leo nec, scelerisque varius metus. Donec non nunc consectetur, molestie nisi id, imperdiet neque. Duis consectetur mauris purus, a malesuada mi iaculis id. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec vitae laoreet mauris. Proin mattis, leo in varius viverra, mauris nunc accumsan quam, non molestie nunc odio tempor diam.</span>
+	</small>
+</p>
