--- a/homeupc.templates/notificacio.html
+++ b/homeupc.templates/notificacio.html
@@ -1,7 +1,9 @@
 <div class="bs-example bs-example-standalone" data-example-id="dismissible-alert-js">
-<div class="alert alert-warning alert-dismissible fade in" role="alert">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">×</span>
-  </button>
-  <strong>Lorem ipsum</strong> dolor sit amet, consectetur adipiscing elit. Morbi ac tincidunt nulla. Nam lorem tellus, cursus eu tellus ac, congue rutrum nisi. Suspendisse eu libero a magna pellentesque eleifend. Praesent id molestie sapien.
+    <div class="alert alert-warning alert-dismissible fade in" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">×</span>
+        </button>
+        <strong>Lorem ipsum</strong> dolor sit amet, consectetur adipiscing elit. Morbi ac tincidunt nulla. Nam lorem tellus, cursus eu tellus ac, congue rutrum nisi. Suspendisse eu libero a magna pellentesque eleifend. Praesent id molestie sapien.
+    </div>
+    <p></p>
 </div>
