--- a/homeupc.templates/taula-responsive.html
+++ b/homeupc.templates/taula-responsive.html
@@ -1,43 +1,54 @@
 <h2>Taula Responsive</h2>
-<table class="table table-responsive"><caption>Subtítol opcional de la taula</caption>
-  <thead>
-    <tr>
-      <th>#</th>
-      <th>Títol Columna 1</th>
-      <th>Títol Columna 2</th>
-      <th>Títol Columna 3</th>
-      <th>Títol Columna 4</th>
-      <th>Títol Columna 5</th>
-      <th>Títol Columna 6</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Lorem ipsum</td>
-      <td>Lorem ipsum</td>
-      <td>Lorem ipsum</td>
-      <td>Lorem ipsum</td>
-      <td>Lorem ipsum</td>
-      <td>Lorem ipsum</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Lorem ipsum</td>
-      <td>Lorem ipsum</td>
-      <td>Lorem ipsum</td>
-      <td>Lorem ipsum</td>
-      <td>Lorem ipsum</td>
-      <td>Lorem ipsum</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Lorem ipsum</td>
-      <td>Lorem ipsum</td>
-      <td>Lorem ipsum</td>
-      <td>Lorem ipsum</td>
-      <td>Lorem ipsum</td>
-      <td>Lorem ipsum</td>
-    </tr>
-  </tbody>
-</table>
+<div class="table-responsive">
+    <table class="table">
+        <caption>Subtítol opcional de la taula</caption>
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Títol Columna 1</th>
+                <th>Títol Columna 2</th>
+                <th>Títol Columna 3</th>
+                <th>Títol Columna 4</th>
+                <th>Títol Columna 5</th>
+                <th>Títol Columna 6</th>
+                <th>Títol Columna 7</th>
+                <th>Títol Columna 8</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+                <td>Lorem ipsum</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
