--- a/homeupc.templates/text-preformat.html
+++ b/homeupc.templates/text-preformat.html
@@ -1,1 +1,1 @@
-<pre style="outline-style: none;">Lorem ipsum dolor sit amet, consectetur adipiscing elit</pre>
+<pre>Lorem ipsum dolor sit amet, consectetur adipiscing elit</pre>
