--- a/homeupc.templates/tooltip.html
+++ b/homeupc.templates/tooltip.html
@@ -1,4 +1,1 @@
-<button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="left" title="Tooltip on left">Tooltip on left</button>
-<button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Tooltip on top</button>
-<button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">Tooltip on bottom</button>
-<button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="right" title="Tooltip on right">Tooltip on right</button>
+<a href="#" data-placement="right" target="_self" data-toggle="tooltip" data-original-title="Lorem ipsum right" rel="tooltip">Lorem ipsum</a>
