Afegit titol <h2> a la plantilla

--- a/homeupc.templates/llista-seccions-icones.html
+++ b/homeupc.templates/llista-seccions-icones.html
@@ -1,3 +1,4 @@
+<h2>Llista de seccions amb icones</h2>
 <h3>Lorem ipsum</h3>
 <ul class="list-sections">
     <li><img src="../resolveuid/d7ca8313bd8a4791aa1635adecbc7c54/@@images/image/large" alt="" />
