actualització xarxes amb nou estil

--- a/homeupc.templates/xarxes.html
+++ b/homeupc.templates/xarxes.html
@@ -1,15 +1,17 @@
-<div class="compact-address">
-    <header>
-        <h2>Segueix-nos</h2>
-    </header>
-    <section>
-        <ul class="list-inline">
-            <li><a href="#" data-placement="top" title="" class="icona-upc" data-original-title="Twitter">twitter</a></li>
-            <li><a href="#" data-placement="top" title="" class="icona-upc" data-original-title="Facebook">facebook</a></li>
-            <li><a href="#" data-placement="top" title="" class="icona-upc" data-original-title="Instagram">instagram</a></li>
-            <li><a href="#" data-placement="top" title="" class="icona-upc" data-original-title="YouTube">youtube</a></li>
-            <li><a href="#" data-placement="top" title="" class="icona-upc" data-original-title="UPCtv">upctv</a></li>
-            <li><a href="#" data-placement="top" title="" class="icona-upc" data-original-title="LinkedIn">linkedin</a></li>
-        </ul>
-    </section>
+<div class="compact-address"><header>
+    <h2>Segueix-nos</h2>
+</header>
+<section>
+    <ul class="list-inline">
+        <li><i class="glyphicon link-external"></i><a href="https://twitter.com/la_UPC" data-toggle="tooltip" data-placement="top" title="" class="icona-upc icon-twitter" data-original-title="Twitter"></a></li>
+        <li><i class="glyphicon link-external"></i><a href="https://www.facebook.com/universitatUPC" data-toggle="tooltip" data-placement="top" title="" class="icona-upc icon-facebook" data-original-title="Facebook"></a></li>
+        <li><i class="glyphicon link-external"></i><a href="https://www.instagram.com/la_upc/" data-toggle="tooltip" data-placement="top" title="" class="icona-upc icon-instagram" data-original-title="Instagram"></a></li>
+        <li><i class="glyphicon link-external"></i><a href="https://www.youtube.com/upc" data-toggle="tooltip" data-placement="top" title="" class="icona-upc icon-youtube" data-original-title="YouTube"></a></li>
+        <li><i class="glyphicon link-external"></i><a href="http://tv.upc.edu" data-toggle="tooltip" data-placement="top" title="" class="icona-upc icon-upctv" data-original-title="UPCtv"></a></li>
+        <li><i class="glyphicon link-external"></i><a href="http://tv.upc.edu" data-toggle="tooltip" data-placement="top" title="" class="icona-upc icon-linkedin" data-original-title="LinkedIn"></a></li>
+        <li><i class="glyphicon link-external"></i><a href="http://itunes.apple.com/es/institution/universitat-politecnica-catalunya./id465046416" data-toggle="tooltip" data-placement="top" title="" class="icona-upc icon-itunesu" data-original-title="iTunes University"></a></li>
+        <li><i class="glyphicon link-external"></i><a href="https://www.upc.edu/ca/sala-de-premsa/noticies/RSS" data-toggle="tooltip" data-placement="top" title="" class="icona-upc icon-rss" data-original-title="RSS"></a></li>
+    </ul>
+</section>
 </div>
+<p></p>
